--- a/styles/title.css
+++ b/styles/title.css
@@ -28,7 +28,7 @@
     padding-bottom: 0px;
 }
 .banner h1 span{
-    color: #10B981;
+    color: var(--secondary-color);
 }
 .banner p { 
     font-size: 19px;
@@ -46,12 +46,12 @@
     cursor: pointer;
 }
 .download-iso-button{
-    background-color: #10B981;
+    background-color: var(--secondary-color);
     color: var(--main-color);
 
 }
 .download-iso-button:hover{
-    background-color: #20cb92;
+    background-color: var(--secondary-hover-color);
 }
 .migrate-button{
     background-color: #F6F6F7;
@@ -81,7 +81,7 @@
 }
 
 .moto{
-    color: #10B981;
+    color: var(--secondary-color);
 }
 .features-section h2,.news-section h2,.companies-section h2{
     font-size: 36px;
@@ -127,10 +127,14 @@
 /* news section */
 
 .news-card{
+    
     border: none;
     border-radius: 10px;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
     padding: 3px 20px 3px 20px;
+}
+.news-card:hover,.companies-card:hover{
+    cursor: pointer;
 }
 
 .news-card:hover{
@@ -138,6 +142,8 @@
 }
 
 .news-card-title{
+    overflow: hidden;
+    white-space: nowrap;
     display: flex;
     flex-direction: column;
     margin-top: 5px;
@@ -156,6 +162,11 @@
 .news-card-description{
     font-size: 15px;
     line-height: 23px;
+    
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 
